package com.anniefraz.dissertation.gin.edit;

import com.anniefraz.dissertation.gin.source.AnnaClass;

public interface RandomEditFactory {
    Edit getRandomEdit(AnnaClass annaClass);
}
