@startuml

title __EDIT's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        interface Edit {
            {abstract} + apply()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        class ListBasedRandomEditFactory {
            - editFunctions : List<Function<AnnaClass, Edit>>
            - randomNumberGenerator : Supplier<Double>
            + ListBasedRandomEditFactory()
            + getRandomEdit()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        abstract class MultipleClassEdit {
            - annaPaths : List<AnnaPath>
            + MultipleClassEdit()
            + apply()
            {abstract} # applyMethod()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        interface RandomEditFactory {
            {abstract} + getRandomEdit()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        abstract class SingleClassEdit {
            + SingleClassEdit()
            + apply()
            {abstract} # applyMethod()
        }
      }
    }
  }
  

  ListBasedRandomEditFactory -up-|> RandomEditFactory
  MultipleClassEdit -up-|> Edit
  SingleClassEdit -up-|> Edit
  SingleClassEdit o-- AnnaPath : annaPath


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
